zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__floating_no_ui_fullscreen_covers_tab_and_status_bar.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
expression: snapshot
---
00 (C):                                                                                                                          
01 (C):                                                                                                                          
02 (C):                                                                                                                          
03 (C):                    I am a floating pane                                                                                  
04 (C):                                                                                                                          
05 (C):                                                                                                                          
06 (C):                                                                                                                          
07 (C):                                                                                                                          
08 (C):                                                                                                                          
09 (C):                                                                                                                          
10 (C):                                                                                                                          
11 (C):                                                                                                                          
12 (C):                                                                                                                          
13 (C):                                                                                                                          
14 (C):                                                                                                                          
15 (C):                                                                                                                          
16 (C):                                                                                                                          
17 (C):                                                                                                                          
18 (C):                                                                                                                          
19 (C):                                                                                                                          

