zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__focus_stacked_pane_over_flexible_pane_with_the_mouse.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
assertion_line: 4362
expression: snapshot
---
00 (C): ┌ Pane #6 ─────────────────────────────────────────────────┐┌ Pane #1 ──────────────────────────────────────────────────┐
01 (C): │                                                          │┌ Pane #3 ──────────────────────────────────────────────────┐
02 (C): │                                                          ││                                                           │
03 (C): │                                                          ││                                                           │
04 (C): │                                                          ││                                                           │
05 (C): │                                                          ││                                                           │
06 (C): │                                                          ││                                                           │
07 (C): │                                                          │└───────────────────────────────────────────────────────────┘
08 (C): │                                                          │┌ Pane #4 ──────────────────────────────────────────────────┐
09 (C): └──────────────────────────────────────────────────────────┘┌ Pane #5 ──────────────────────────────────────────────────┐
10 (C): ┌ Pane #2 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
11 (C): │                                                                                                                       │
12 (C): │                                                                                                                       │
13 (C): │                                                                                                                       │
14 (C): │                                                                                                                       │
15 (C): │                                                                                                                       │
16 (C): │                                                                                                                       │
17 (C): │                                                                                                                       │
18 (C): │                                                                                                                       │
19 (C): └───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘

